fixed alignments

--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,11 @@ h5{
 
 #nsc{
   color: rgb(223, 220, 220);
+  align-self: center;
+}
+#nsc h3{
+  color: rgb(223, 220, 220);
+  text-align: center;
 }
 
 hr{
